--- a/seani/templates/exam/add_candidate.html
+++ b/seani/templates/exam/add_candidate.html
@@ -1,5 +1,5 @@
-<form>
-    {% csrt_token %}
-    {{ from }}
+<form method="post">
+    {% csrf_token %}
+    {{ form }}
     <input type="submit" value="Guardar">
 </form>
